KOGITO-2741 Enrich TraceEvent with data types information (#651)
* [KOGITO-2741] Add TypedVariable to TraceEvent

* [KOGITO-2741] TraceOutputValue inputs field is now a Map

* [KOGITO-2741] Fix CollectionVariable value

* [KOGITO-2741] Increase readability of DefaultAggregator

* [KOGITO-2741] Add jackson annotations to tracing-decision-api variable classes

* [KOGITO-2741] Use Java 8 syntax in tracing decision addon

* [KOGITO-2741] Export serviceUrl

* [KOGITO-2741] Include serviceUrl in CloudEvent source

* [KOGITO-2741] Quarkus tracing decision addon: fix QuarkusExplainableResourceIT

* [KOGITO-2741] Fix CdiConfigBeanTemplate in kogito-codegen

Co-authored-by: Daniele Zonca <dzonca@redhat.com>